--- a/DocsVision_Test-master/Registration/Registration.Api/Web.config
+++ b/DocsVision_Test-master/Registration/Registration.Api/Web.config
@@ -14,6 +14,7 @@
   <ConfigurationService Name="Registration.Api.WebConfigurationService"/>
   <DataSerializeService Name="Registration.DataSerialization.DataSerializationXML"/>
   <appSettings>
+    <add key="connectionString0" value="DV" />
     <add key="connectionString1" value="RegistrationWithFolders.DB" />
     <add key="connectionString2" value="Regustration.DB" />
     <add key="connectionString3" value="tempdb" />
