--- a/DocsVision_Test-master/Registration/Registretion.Model/Registration.Model.csproj
+++ b/DocsVision_Test-master/Registration/Registretion.Model/Registration.Model.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DocsVision.Platform.ObjectManager, Version=5.0.0.0, Culture=neutral, PublicKeyToken=7148afe997f90519, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\..\Windows\Microsoft.NET\assembly\GAC_MSIL\DocsVision.Platform.ObjectManager\v4.0_5.0.0.0__7148afe997f90519\DocsVision.Platform.ObjectManager.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -53,6 +57,7 @@
     <Compile Include="LetterWithReminderData.cs" />
     <Compile Include="Worker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkersDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
